--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "babel-jest": "^23.0.1",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
+    "style-resources-loader": "^1.2.1",
+    "vue-cli-plugin-style-resources-loader": "^0.1.3",
     "vue-template-compiler": "^2.5.17"
   }
 }
