--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "deploy": "vue-cli-service s3-deploy",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
@@ -27,6 +28,7 @@
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1",
+    "vue-cli-plugin-s3-deploy": "^2.0.2",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
     "vue-template-compiler": "^2.5.17"
   }
